@@ -24,5 +24,6 @@ endif
 
 ifeq ($(shell expr "$(POSTGIS_SFCGAL_VERSION)" ">=" 10500),1)
 	TESTS += \
-		$(top_srcdir)/sfcgal/regress/partition.sql
+		$(top_srcdir)/sfcgal/regress/partition.sql \
+		$(top_srcdir)/sfcgal/regress/extrudestraigthskeleton.sql
 endif
